--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "mysql2": "^3.17.2",
     "nodemon": "^3.1.11"
@@ -8,7 +9,6 @@
   "version": "1.0.0",
   "description": "Repository för databasprojekt vid Teknikhögskolan\r Hej detta är jag",
   "main": "db.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
