--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "name": "webshop-najs",
   "version": "1.0.0",
   "description": "Repository för databasprojekt vid Teknikhögskolan\r Hej detta är jag",
-  "main": "db.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
