--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
-    "mysql2": "^3.17.2",
+    "mysql2": "^3.17.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.11"
   },
   "name": "webshop-najs",
   "version": "1.0.0",
   "description": "Repository för databasprojekt vid Teknikhögskolan\r Hej detta är jag",
-  "main": "db.js",
+  "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server/server.js",
