--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
-    "mysql2": "^3.17.2",
-    "nodemon": "^3.1.11"
+    "mysql2": "^3.17.2"
   },
   "name": "webshop-najs",
   "version": "1.0.0",
-  "description": "Repository för databasprojekt vid Teknikhögskolan\r Hej detta är jag",
+  "description": "Repository för databasprojekt vid Teknikhögskolan",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "repository": {
@@ -26,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/nils-fjp/webshop-najs/issues"
   },
-  "homepage": "https://github.com/nils-fjp/webshop-najs#readme"
+  "homepage": "https://github.com/nils-fjp/webshop-najs#readme",
+  "devDependencies": {
+    "nodemon": "^3.1.14"
+  }
 }
